# mendicant-bias

./: .gitignore  TRINITY_TEST.md
.mendicant/: checkpoint.json  context_monitor.sh  reset_counter.sh
cc-plugin/: package.json
cc-plugin/agents/: the_architect.md  the_cartographer.md  the_oracle.md
cc-plugin/skills/mendicant_bias/: SKILL.md
cc-plugin/src/: index.ts
core/: pyproject.toml
core/src/mendicant_core/: __init__.py  mcp_client.py
core/src/mendicant_core/agents/: agent_mapping.json
core/src/mendicant_core/agents/profiles/: cinna.md  hollowed_eyes.md  the_architect.md  the_cartographer.md  the_oracle.md  the_scribe.md  the_sentinel.md  zhadyz.md
core/src/mendicant_core/config/: __init__.py  settings.py
core/src/mendicant_core/mahoraga/: __init__.py  mini_wheel.py  wheel.py
core/src/mendicant_core/memory/: __init__.py  models.py  store.py  updater.py
core/src/mendicant_core/middleware/: __init__.py  context_budget.py  context_optimizer.py  dangling_tool_call.py  smart_task_router.py  verification.py
core/src/mendicant_core/orchestrator/: __init__.py  spawner.py
core/src/mendicant_core/sandbox/: tools.py
core/src/mendicant_core/subagents/: __init__.py
core/tests/: test_middleware.py  test_new_middleware.py  test_optimizer.py  test_sandbox.py
gateway/: pyproject.toml
gateway/src/mendicant_gateway/: __init__.py  app.py  hooks.py
mcp-server/src/mendicant_mcp/: __init__.py  server.py
mendicant-bias/: .env.example  pyproject.toml
mendicant-bias/agents/: loveless.md  the_sentinel.md  zhadyz.md
mendicant-bias/config/: claude-code-mcp.json
mendicant-bias/docker/: Dockerfile
mendicant-bias/scripts/: statusline.py  statusline.sh
mendicant-bias/skills/: INSTALL.md
mendicant-bias/src/mendicant_bias/: __init__.py  cli.py  hooks.py
runtime/: pyproject.toml
runtime/src/mendicant_runtime/: __init__.py  agent.py  config.py  models.py  subagents.py  thread_state.py
ui/: package.json
ui/src/app/: layout.tsx
ui/src/app/workspace/: page.tsx
ui/src/components/landing/: hero.tsx
ui/src/components/ui/: button.tsx  card.tsx
ui/src/components/workspace/: sidebar.tsx
ui/src/lib/: api.ts
ui/src/styles/: globals.css
