[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mendicant-bias"
version = "5.0.0"
description = "Mendicant Bias — A Contender-class AI agent system with intelligence middleware"
requires-python = ">=3.11"
dependencies = [
    "mendicant-core>=5.0.0",
    "mendicant-mcp-server>=5.0.0",
    "mendicant-runtime>=5.0.0",
    "mendicant-gateway>=5.0.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
mendicant = "mendicant_bias.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mendicant_bias"]
